--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Swapnil | Developer|Young Zingaro|Wonder Seeker</title>
+		<title>Swapnil | Developer| Young Zingaro | Wonder Seeker</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -53,13 +53,13 @@
 
 							<!-- logo -->
 							<div class="logo smooth-scroll">
-								<a href="#banner"><img id="logo" src="images/logo.png" alt="Worthy"></a>
+								<a href="#banner"><img id="logo" src="images/logo.png" alt="Swapnil"></a>
 							</div>
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
 								<div class="site-name"><a href="#banner">Worthy</a></div>
-								<div class="site-slogan">Free Bootstrap Theme by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a></div>
+								<div class="site-slogan"> Developer| Young Zingaro | Wonder Seeker <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a></div>
 							</div>
 
 						</div>
@@ -127,7 +127,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<h1 class="text-center">We are <span>Worthy</span></h1>
+							<h1 class="text-center">Hi, I am <span>Swapnil</span></h1>
 							<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos debitis provident nulla illum minus enim praesentium repellendus ullam cupiditate reiciendis optio voluptatem, recusandae nobis quis aperiam, sapiente libero ut at.</p>
 						</div>
 					</div>
