--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
-								<div class="site-name"><a href="#banner">Worthy</a></div>
-								<div class="site-slogan"> Developer| Young Zingaro | Wonder Seeker <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a></div>
+								<div class="site-name"><a href="#banner">Swapnil</a></div>
+								<div class="site-slogan">Developer| Young Zingaro | Wonder Seeker</div>
 							</div>
 
 						</div>
