--- a/index.html
+++ b/index.html
@@ -1005,18 +1005,18 @@
 							<div class="footer-content">
 								<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel nam magnam natus tempora cumque, aliquam deleniti voluptatibus voluptas. Repellat vel, et itaque commodi iste ab, laudantium voluptas deserunt nobis.</p>
 								<ul class="list-icons">
-									<li><i class="fa fa-map-marker pr-10"></i> One infinity loop, 54100</li>
-									<li><i class="fa fa-phone pr-10"></i> +00 1234567890</li>
-									<li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>
-									<li><i class="fa fa-envelope-o pr-10"></i> your@email.com</li>
+									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
+									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
+								<!--	<li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>-->
+									<li><i class="fa fa-envelope-o pr-10"></i> swapneel.jathar@gmail.com</li>
 								</ul>
 								<ul class="social-links">
-									<li class="facebook"><a target="_blank" href="https://www.facebook.com/pages/HtmlCoder/714570988650168"><i class="fa fa-facebook"></i></a></li>
-									<li class="twitter"><a target="_blank" href="https://twitter.com/HtmlcoderMe"><i class="fa fa-twitter"></i></a></li>
-									<li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
-									<li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li>
-									<li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-									<li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+									<li class="facebook"><a target="_blank" href="https://www.facebook.com/jathar.swapnil"><i class="fa fa-facebook"></i></a></li>
+									<li class="twitter"><a target="_blank" href="https://twitter.com/SwapnilJathar"><i class="fa fa-twitter"></i></a></li>
+									<li class="googleplus"><a target="_blank" href="http://plus.google.com/+SwapnilJathar007"><i class="fa fa-google-plus"></i></a></li>
+									<li class="skype"><a target="_blank" href="http://www.skype.com/swap.jathar"><i class="fa fa-skype"></i></a></li>
+									<li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/swapniljathar"><i class="fa fa-linkedin"></i></a></li>
+									<li class="instagram"><a target="_blank" href="http://www.instagram.com/swapnil.jathar"><i class="fa fa-instagram"></i></a></li>
 									<li class="flickr"><a target="_blank" href="http://www.flickr.com"><i class="fa fa-flickr"></i></a></li>
 									<li class="pinterest"><a target="_blank" href="http://www.pinterest.com"><i class="fa fa-pinterest"></i></a></li>
 								</ul>
@@ -1055,7 +1055,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">Copyright © 2014 Worthy by <a target="_blank" href="http://htmlcoder.me">HtmlCoder</a>.</p>
+							<p class="text-center">Copyright © 2015 Swapnil by <a target="_blank" href="http://swapniljathar.com">Swapnil Jathar</a>.</p>
 						</div>
 					</div>
 				</div>
