--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
 						<div class="media">
 							<div class="media-body text-right">
 								<h4 class="media-heading">Service 2</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo quis exercitationem reprehenderit dolor vel ducimus, voluptate eaque suscipit iste placeat.</p>
+								<p>“…..पोटापाण्याचा उद्योग तर हवाच. पण नाटक, गाणं, कविता, अशा एखाद्या तरी कलेशी नातं ठेवा. पोटापाण्याचा उद्योग तुम्हाला जगवील आणि कलेशी असलेलं नातं जगायचं कशासाठी ते सांगेल!!” – पु. ल. देशपांडे</p>
+                                                                <p>(Profession for bread-butter is the basic necessity, but possess one of the fine arts as well. Profession is a means of livelihood and the relationship with an art will give you the reason to live. &#8211; P. L. Deshpande)</p>
 							</div>
 							<div class="media-right">
 								<i class="fa fa-check"></i>
