--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Swapnil | Developer| Young Zingaro | Wonder Seeker</title>
+		<title>Swapnil | Developer | Young Zingaro | Wonder Seeker</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -1005,7 +1005,9 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="footer-content">
-								<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel nam magnam natus tempora cumque, aliquam deleniti voluptatibus voluptas. Repellat vel, et itaque commodi iste ab, laudantium voluptas deserunt nobis.</p>
+								<p class="large">If you have any questions or just want to give me a shout you can do so via twitter, facebook, email or whatsapp. Thanks for visiting my site and I hope you found some cool stuff to use while you were here!
+
+Take care, Swapnil</p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
 									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
