--- a/index.html
+++ b/index.html
@@ -1000,14 +1000,12 @@
 			<!-- ================ -->
 			<div class="footer section">
 				<div class="container">
-					<h1 class="title text-center" id="contact">Contact Us</h1>
+					<h1 class="title text-center" id="contact">Send me a Note.</h1>
 					<div class="space"></div>
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="footer-content">
-								<p class="large">If you have any questions or just want to give me a shout you can do so via twitter, facebook, email or whatsapp. Thanks for visiting my site and I hope you found some cool stuff to use while you were here!<br>
-
-Take care, Swapnil.</p>
+								<p class="large">Whether it’s regarding my work or not, I’d love to hear from you. Drop me a note. If you have any questions or just want to give me a shout you can do so via twitter, facebook, email or whatsapp. Thanks for visiting my site and I hope you found some cool stuff to use while you were here!<br><br>Take care, Swapnil.</p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
 									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
