--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 							<!-- logo -->
 							<div class="logo smooth-scroll">
-								<a href="#banner"><img id="logo" src="images/logo.png" alt="Swapnil"></a>
+								<a href="#banner"><img id="logo" src="images/logo.png" alt=""></a>
 							</div>
 
 							<!-- name-and-slogan -->
