--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 						<!-- ================ -->
 						<div class="header-left clearfix">
 
-							<!-- logo -->
+							<!-- logo 
 							<div class="logo smooth-scroll">
 								<a href="#banner"><img id="logo" src="images/logo.png" alt=""></a>
-							</div>
+							</div> -->
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
