--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- ================ -->
 						<div class="header-left clearfix">
 
-							logo 
+								<!--logo -->
 							<div class="logo smooth-scroll">
 								<a href="#banner"><img id="logo" src="images/logo.png" alt=""></a>
 							</div>
