--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 										<div class="panel-heading" role="tab" id="headingOne">
 											<h4 class="panel-title">
 												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-													Collapsible Group Item #1
+													Developer
 												</a>
 											</h4>
 										</div>
@@ -191,7 +191,7 @@
 										<div class="panel-heading" role="tab" id="headingTwo">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-													Collapsible Group Item #2
+													Young Zingaro
 												</a>
 											</h4>
 										</div>
@@ -205,7 +205,7 @@
 										<div class="panel-heading" role="tab" id="headingThree">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-													Collapsible Group Item #3
+													Wonder Seeker
 												</a>
 											</h4>
 										</div>
