--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
 									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
 								<!--	<li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>-->
-									<li><i class="fa fa-envelope-o pr-10"></i> swapneel.jathar@gmail.com</li>
+									<li><i class="fa fa-envelope-o pr-10"></i> textswapnil@gmail.com</li>
 								</ul>
 								<ul class="social-links">
 									<li class="facebook"><a target="_blank" href="https://www.facebook.com/jathar.swapnil"><i class="fa fa-facebook"></i></a></li>
