--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1 id="about" class="title text-center">About <span>Worthy</span></h1>
-						<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta officia, aspernatur.</p>
+						<h1 id="about" class="title text-center">About <span> <!--Worthy</span>--> </h1>
+						<p class="lead text-center">
 						<div class="space"></div>
 						<div class="row">
 							<div class="col-md-6">
@@ -155,24 +155,27 @@
 								<div class="space"></div>
 							</div>
 							<div class="col-md-6">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
-								<ul class="list-unstyled">
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Lorem ipsum dolor sit amet</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Reiciendis deleniti neque aliquid</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Ipsam fuga error commodi</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Lorem ipsum dolor sit amet</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> Dignissimos molestiae necessitatibus</li>
-								</ul>
+								<p>My present: </p>
+
+                                                                <p>Freshly postgraduate, hungry, foolish, and determined to make a mark; now that I am done studying (for now), it is high time I start working towards my dreams.</p>
+
+                                                                <p>The scene is hasn't changed much: I am at a stage where I am not focusing much on where I come from - I am focusing on where I (and my work) want to go</p>
+							
+								<p>My future: </p>
+
+                                                                <p>I see myself as all of the above - and more. 
+
+                                                                <p>On the career front, I aim to start with research and reach a position of influence, taking decisions that would make a positive difference in the lives of ordinary people; status, authority and financial gain are byproducts.
+
+                                                                <p>Entrepreneurship? Still toying with the idea. 
 							</div>
 						</div>
 						<div class="space"></div>
-						<h2>Becessitatibus quae beatae possimus ullam</h2>
+						<!----<h2>Becessitatibus quae beatae possimus ullam</h2> ---->
 						<div class="row">
 							<div class="col-md-6">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
-								<p>Vitae dolores quam magnam accusantium nam, voluptatibus expedita delectus, dolorum odio magni ut nemo nihil ex earum pariatur molestias velit eveniet, facere autem saepe aut. Ut minima itaque porro facere. Cumque vitae autem, dignissimos molestiae necessitatibus culpa aliquam deleniti soluta sunt voluptatibus tenetur, unde dolorem eligendi doloribus quibusdam facere totam. Possimus atque deserunt numquam aliquam magnam, facilis officiis illo alias ipsa voluptas laborum, praesentium eveniet nobis velit voluptatem odio eligendi, corporis et iste distinctio! Repellendus, id, ad.</p>
+								<p>I am both versatile and specialized, modern and old-fashioned, rebellious and obedient, all at one go. I love to read, write, ask, talk, listen, solve problems, and cherish ideas. I like to work round the clock, go partying on weekends, and compete with myself incessantly.</p>
+								<p>I love my country, culture, and heritage, and I also love rebelling against the prevailing stereotypes in my society. I love being ambitious, but I love being simple even more. I can be an extrovert and the soul of a party, and I can also keep a low profile and move quietly, both with a healthy confidence and priority to living the moment. If there could be an example of opposites turning into complements, that would be me.</p>
 							</div>
 							<div class="col-md-6">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -186,7 +189,7 @@
 										</div>
 										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 											<div class="panel-body">
-												Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher.
+												I have an obsession with perfect and clean code. I don’t consider myself a developer even though I spend most of my days coding. I kinda like to think of myself as a coder.
 											</div>
 										</div>
 									</div>
