--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
-							<!-- <h1 class="text-center">Hi, I am <span>Swapnil</span></h1> -->
-							<!-- <p>“…..पोटापाण्याचा उद्योग तर हवाच. पण नाटक, गाणं, कविता, अशा एखाद्या तरी कलेशी नातं ठेवा. पोटापाण्याचा उद्योग तुम्हाला जगवील आणि कलेशी असलेलं नातं जगायचं कशासाठी ते सांगेल!!” – पु. ल. देशपांडे</p>
-                                                        <p>Profession for bread-butter is the basic necessity, but possess one of the fine arts as well. Profession is a means of livelihood and the relationship with an art will give you the reason to live. &#8211; P. L. Deshpande</p>
-						        -->
+							<h1 class="text-center">Hi, I am <span>Swapnil</span></h1>
+							<p>“…..पोटापाण्याचा उद्योग तर हवाच. पण नाटक, गाणं, कविता, अशा एखाद्या तरी कलेशी नातं ठेवा. पोटापाण्याचा उद्योग तुम्हाला जगवील आणि कलेशी असलेलं नातं जगायचं कशासाठी ते सांगेल!!” – पु. ल. देशपांडे</p>
+                                                        <p>Profession for bread-butter is the basic necessity, but possess one of the fine arts as well. Profession is a means of livelihood and the relationship with an art will give you the reason to live. - P. L. Deshpande</p>
 						</div>
 					</div>
 				</div>
