--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,9 @@
 						<div class="col-sm-6">
 							<div class="footer-content">
 								<p class="large">Whether it’s regarding my work or not, I’d love to hear from you. If you have any questions or just want to give me a shout you can do so via email.</p>
-								<p class="large">Thanks for visiting my site and I hope you found some cool stuff to use while you were here!<br>Take care, Swapnil.</p>
+								<p class="large">Thanks for visiting my site and I hope you found some cool stuff to use while you were here!</p>
+								<p class="large">Take care,</p>
+								<p class="large">Swapnil. </p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
 									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
