--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
                                                                 <p>Freshly postgraduate, hungry, foolish, and determined to make a mark; now that I am done studying (for now), it is high time I start working towards my dreams.</p>
 
-                                                                <p>The scene is hasn't changed much: I am at a stage where I am not focusing much on where I come from - I am focusing on where I (and my work) want to go</p>
-							
+                                                                <p>The scene is hasn't changed much: I am at a stage where I am not focusing much on where I come from - I am focusing on where I (and my work) want to go. </p>
+							        <p> </p>
 								<p>My future: </p>
 
                                                                 <p>I see myself as all of the above - and more. 
@@ -1046,8 +1046,7 @@
 							<div class="footer-content">
 								<p class="large">Whether it’s regarding my work or not, I’d love to hear from you. If you have any questions or just want to give me a shout you can do so via email.</p>
 								<p class="large">Thanks for visiting my site and I hope you found some cool stuff to use while you were here!</p>
-								<p class="large">Take care,
-								                 Swapnil. </p>
+								<p class="large">Take care, Swapnil. </p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
 									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
