--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 										</div>
 										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 											<div class="panel-body">
-												I have an obsession with perfect and clean code. I don’t consider myself a developer even though I spend most of my days coding. I kinda like to think of myself as a coder.
+												I have an obsession with perfect and clean code and patterns. I don’t consider myself a developer even though I spend most of my days coding. I kinda like to think of myself as a coder.
 											</div>
 										</div>
 									</div>
@@ -202,7 +202,19 @@
 										</div>
 										<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 											<div class="panel-body">
-												Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+												किल्ले पाहणे हा एक निदिध्यासाचा विषय झाला आहे. आयुष्यभर सर्वाधिक प्रेम जर कोणावर केलं असेल, तर ते किल्ल्यांवर. सगळा जन्म तो छंद प्राणपणानं जोपासला आहे.कधी कुण्या किल्ल्याच्या तटाखालून चालतो आहे. कधी त्याचा उत्तुंग कडा चढतो आहे. कधी त्या मध्ये कोरलेल्या बहुता काळीच्या खोबणी मध्ये बोटं चिटकवून त्या बळावर कुडी वर ओढतो आहे. कुठं कुणा किल्ल्याच्या माथ्यावरून आसुदान रंगलेला भंवताल शोधतो आहे. कुठं कंबर कंबर, छाती छाती गवतांत पावलं खुपशीत कुण्या किल्ल्याच्या तटावरून हिंडतो आहे. कधी कुण्या बुरूजातल्या चोर वाटेनं कसा बसा तोल सांभाळीत खाली उतरतो आहे. कधी दोन प्रचंड गिरीदुर्गांमधील मैलच्या मैल अंतर कडाडत्या उन्हात चालून जातो आहे. कुठं एखादा बेलाग कड्यावरला तट तळातूनच न्याहाळतो आहे. तर कधी तळातल्या कुण्या कपारीतून ठिपकणारं थेंब थेंब पाणी ओंजळीत भरून तहान शमवतो आहे. कुठं कुण्या गडातळीच्या खनाळात कुणी कधी काळी मांडलेल्या तीन धोंड्यांवर खिचडी शिजवतो आहे. कधी कुण्या किल्ल्यावर जात असता कुण्या दरीचे चढ उतार भटकतो आहे. कधी कुण्या खोगळीत शांतपणे झोपी जातो आहे. कुठं कुण्या किल्ल्याच्या पठारावर चांदिण्या रात्री उलथा झोपून माथ्यावरलं नक्षत्रभरलं आकाश दुर्बिणीतून न्याहाळतो आहे. कधी कुण्या चोर दिंडीनं तटात प्रवेशतो आहे. कधी कुण्या खंदकातून आश्चर्यमाखल्या मुद्रेनं चालतो आहे. कुठं कुण्या किल्ल्यावरील सदरेवर घडलेले ऐतिहासीक प्रसंग स्मरून तिथं मुजरा घालतो आहे. कधी कुण्या गडावरल्या अंबरखान्याच्या भवताली कायबाय हुडकतो आहे. कुठं शेजारच्या कुण्या अलंगेच्या सावलीत बसून कपाळावर साकळलेला घाम पुसतो आहे. कुठं कुण्या किल्ल्यावर पोचणार्‍या भुयारातं गुढग्यांवर रांगत तसूं तसूं पुढं सरतो आहे. कधी कुण्या प्रचंड महाद्वाराच्या भव्यतेनं चेपून जातो आहे. कुठं शेजारचा प्रचंड बुरूज निरखून दाद देतो आहे. कुठं कुण्या तटाच्या जंगीतून तळातलां टप्पा ध्यानी घेतो आहे. कधी कुण्या जळभरल्या टाक्यांत डोकावतो आहे. कुठं कुण्या किल्ल्यावरल्या तळ्यातल्या चिंब थंड पाण्यांत पोहोतो आहे. कुठं कुण्या गडाभंवतालीच्या मेटांचा तलाश करतो आहे.
+                                                                                                
+                                                                                                कधी कुण्या किल्ल्याभंवतालीचे पाहारे हुडकून काढीत ते नकाशावर नोंदतो आहे. कुठं कुण्या किल्ल्यावर अजून जीव धरून उभ्या असलेल्या देवळांत शिवमहिम्नाचा पाठ करतो आहे. कधी कुण्या किल्ल्यावरचे बेभान वारे अनुभवतो आहे. कुठं कोणी एक किल्ला चढून जात असतां वरून कोसळणार्‍या धुवांधार पावसांत काकडतो आहे. कधी धडधडत्या थंडीत एखाद्या बालेकिल्ल्याभंवतालींच्या गच्च धुकटांत हरवून जातो आहे. कुठं कुण्या गडातळीच्या एखाद्या वीरगळासमोर नम्र होतो आहे. कधी दो किल्ल्यांमधले तुडुंबले खळाळत्या जळाचे ओढे ओलांडतो आहे. कधी वाघरासारखा पालथा पडून कुण्या गडावरल्या झरप्यांतलं पाणी पितो आहे. कुठं कुण्या तटाच्या सांवलीत पाठीवरल्या पिशवींतला तहान लाडू - भूक लाडू खातो आहे. कधी कुण्या किल्ल्यांवर मैतरांसवे भटकतो आहे. कितीकदा एकूटवाणा रात्री बेरात्री कुण्या गडाच्या तटा बुरूजांवरून सैराट हिंडतो आहे.
+
+                                                                                                कधी आनंदानं थिरकलो, कधी प्रमादाच्या पुराबरोबर वाहात गेलो. कधी मनं स्थिरावलं कधी गढूळलं -
+
+                                                                                                मीही कुणी ऋषि मुनि नव्हे, प्रमादशील मानव आहे.
+
+                                                                                                ते असो -
+
+                                                                                                पाचं तपं उलटून गेली, असा किल्ल्या गडांचा वेध घेत त्यांच्या वाटा तुडवतो आहे. या दुर्लक्षित आयुष्यापैकी जवळ जवळ तिसरा भाग गड किल्ले भटकतां त्यांचं चिंतन करता, त्यांवर जायचे बेत आंखतां, त्या साठी झुरता व्यतीत झाला.
+
+                                                                                                गोपाल नीलकण्ठ दांडेकर
 											</div>
 										</div>
 									</div>
@@ -216,7 +228,7 @@
 										</div>
 										<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 											<div class="panel-body">
-												Richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic.
+												'And at the end of the day, your feet should be dirty, your hair should be messy and your eyes should be sparkling.'
 											</div>
 										</div>
 									</div>
