--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 								<!--logo -->
 							<div class="logo smooth-scroll">
-								<a href="#banner"><img id="logo" src="images/logo.png" alt=""></a>
+								<!--<a href="#banner"><img id="logo" src="images/logo.png" alt=""></a> -->
 							</div>
 
 							<!-- name-and-slogan -->
@@ -150,7 +150,7 @@
 						<div class="space"></div>
 						<div class="row">
 							<div class="col-md-6">
-								<img src="images/section-image-1.png" alt="">
+									<!----<img src="images/section-image-1.png" alt=""> ---->
 								<div class="space"></div>
 							</div>
 							<div class="col-md-6">
