--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
 								<p>Take care, Swapnil. </p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> Pune, Maharashtra, India </li>
-									<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>
+								<!--	<li><i class="fa fa-phone pr-10"></i> +91 9975772982</li>-->
 								<!--	<li><i class="fa fa-fax pr-10"></i> +00 1234567891 </li>-->
-									<li><i class="fa fa-envelope-o pr-10"></i> textswapnil@gmail.com</li>
+									<li><i class="fa fa-envelope-o pr-10"></i> swap.jathar@gmail.com</li>
 								</ul>
 								<ul class="social-links">
-									<li class="facebook"><a target="_blank" href="https://www.facebook.com/jathar.swapnil"><i class="fa fa-facebook"></i></a></li>
+									<li class="facebook"><a target="_blank" href="https://www.facebook.com/swap.jathar"><i class="fa fa-facebook"></i></a></li>
 									<li class="twitter"><a target="_blank" href="https://twitter.com/SwapnilJathar"><i class="fa fa-twitter"></i></a></li>
 									<li class="googleplus"><a target="_blank" href="http://plus.google.com/+SwapnilJathar007"><i class="fa fa-google-plus"></i></a></li>
 									<li class="skype"><a target="_blank" href="http://www.skype.com/swap.jathar"><i class="fa fa-skype"></i></a></li>
